--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.humanresourcesdepartment'
+    namespace 'com.example.humanresourcesdepart'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.humanresourcesdepartment"
+        applicationId "com.example.humanresourcesdepart"
         minSdk 26
         targetSdk 34
         versionCode 1
@@ -36,6 +36,7 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment:$nav_version")
     implementation("androidx.navigation:navigation-ui:$nav_version")
 
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database:20.3.0'
